--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,19 @@
-<!DOCTYPE resources [<!ENTITY app_name "RcapStone"><!ENTITY app_package "info.pelleritoudacity.android.rcapstone">]>
+<!DOCTYPE resources [<!ENTITY app_name "RcapStone">]>
 <resources>
     <string name="app_name">&app_name;</string>
 
     <string name="title_activity_settings">Settings</string>
 
-    <string name="content_authority" translatable="false">&app_package;</string>
-    <string name="pref_insert_data" translatable="false">&app_package;.pref.insert.data</string>
+    <string name="content_authority" translatable="false">info.pelleritoudacity.android.rcapstone</string>
+    <string name="pref_insert_data" translatable="false">info.pelleritoudacity.android.rcapstone.pref.insert.data</string>
 
     <string name="error_state_critical">Unable to start &app_name;\n cause: %1$s\n Please, start factory data reset in menu settings or restart app. </string>
 
-    <string name="pref_type_mode" translatable="false">&app_package;.pref.type.mode</string>
+    <string name="pref_subreddit_key" translatable="false">info.pelleritoudacity.android.rcapstone.pref.type.mode</string>
 
-    <string name="pref_drawer_night" translatable="false">&app_package;.pref.drawer.night</string>
+    <string name="pref_type_mode" translatable="false">pref.type.mode</string>
+
+    <string name="pref_drawer_night" translatable="false">info.pelleritoudacity.android.rcapstone.pref.drawer.night</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -35,27 +37,27 @@
     <string name="subject_support_mail">Problem with</string>
     <string name="text_mail_intent">Select email application.</string>
 
-    <string name="pref_request_permission" translatable="false">&app_package;.request.permission.external.storage</string>
-    <string name="pref_write_external_storage" translatable="false">&app_package;.write.external.storage</string>
+    <string name="pref_request_permission" translatable="false">info.pelleritoudacity.android.rcapstone.request.permission.external.storage</string>
+    <string name="pref_write_external_storage" translatable="false">info.pelleritoudacity.android.rcapstone.write.external.storage</string>
 
-    <string name="pref_video_uri" translatable="false">&app_package;.prefVideoUri</string>
+    <string name="pref_video_uri" translatable="false">info.pelleritoudacity.android.rcapstone.prefVideoUri</string>
 
-    <string name="pref_widget_id" translatable="false">&app_package;.pref.widget.it</string>
-    <string name="pref_widget_name" translatable="false">&app_package;.pref.widget.name</string>
+    <string name="pref_widget_id" translatable="false">info.pelleritoudacity.android.rcapstone.pref.widget.it</string>
+    <string name="pref_widget_name" translatable="false">info.pelleritoudacity.android.rcapstone.pref.widget.name</string>
 
-    <string name="pref_night_mode" translatable="false">&app_package;.pref_night_mode</string>
+    <string name="pref_night_mode" translatable="false">info.pelleritoudacity.android.rcapstone.pref_night_mode</string>
     <string name="title_night_mode">Night Mode</string>
     <string name="summary_night_mode">Switch the &app_name; app to the Dark theme, displaying white text on black for a comfortable viewing experience at night</string>
 
-    <string name="pref_adult_filter" translatable="false">&app_package;.pref_adult_filter</string>
+    <string name="pref_adult_filter" translatable="false">info.pelleritoudacity.android.rcapstone.pref_adult_filter</string>
     <string name="title_adult_filter">Adult Filter</string>
     <string name="summary_adult_filter">Prevent access to certain items, search for gifs and count the number of results marked age +18.</string>
 
-    <string name="pref_rendering_video" translatable="false">&app_package;.pref_resume_video</string>
+    <string name="pref_rendering_video" translatable="false">info.pelleritoudacity.android.rcapstone.pref_resume_video</string>
     <string name="title_rendering_video">Video Rendering</string>
     <string name="summary_rendering_video">Allow use of extension renderers.</string>
 
-    <string name="pref_sync_frequency" translatable="false">&app_package;pref_sync_frequency</string>
+    <string name="pref_sync_frequency" translatable="false">info.pelleritoudacity.android.rcapstonepref_sync_frequency</string>
     <string name="pref_title_sync_frequency" translatable="false">Sync Data</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
@@ -76,7 +78,7 @@
 
     <string name="title_clear_data">Factory data reset</string>
     <string name="summary_clear_data">Delete all data stored on device.</string>
-    <string name="pref_clear_data">&app_package;.pref.clear.data</string>
+    <string name="pref_clear_data">info.pelleritoudacity.android.rcapstone.pref.clear.data</string>
     <string name="text_clear_data">This action will delete all your data. Are you sure you want to continue?</string>
     <string name="text_dialog_confirm_reset">Factory Data Reset: Delete All Data.</string>
     <string name="title_dialog_confirm">Factory Data Reset</string>
