Subscription Alpha version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="title_submenu_controver">Controver</string>
 
     <string name="title_menu_create">Create Post</string>
+    <string name="text_handle_description">handle image</string>
 
 
 </resources>
