--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="pref_session_username" translatable="false">info.pelleritoudacity.android.rcapstone.session.username</string>
     <string name="pref_session_access_token" translatable="false">info.pelleritoudacity.android.rcapstone.session.access.token</string>
     <string name="pref_session_refresh_token" translatable="false">info.pelleritoudacity.android.rcapstone.session.refresh.token</string>
-    <string name="pref_session_cookie" translatable="false">info.pelleritoudacity.android.rcapstone.session.cookie</string>
+    <string name="pref_session_expired" translatable="false">info.pelleritoudacity.android.rcapstone.session.expired</string>
 
     <string name="pref_widget_id" translatable="false">info.pelleritoudacity.android.rcapstone.pref.widget.it</string>
     <string name="pref_widget_name" translatable="false">info.pelleritoudacity.android.rcapstone.pref.widget.name</string>
