--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,9 +63,9 @@
     <string name="title_adult_filter">Adult Filter</string>
     <string name="summary_adult_filter">Prevent access to certain items, search for gifs and count the number of results marked age +18.</string>
 
-    <string name="pref_original_size_image" translatable="false">info.pelleritoudacity.android.rcapstone.pref.original.size.image</string>
-    <string name="title_original_size_image">Upload HD Photos</string>
-    <string name="summary_original_size_image">Enabled high definition image.</string>
+    <string name="pref_original_size_content" translatable="false">info.pelleritoudacity.android.rcapstone.pref.original.size.content</string>
+    <string name="title_original_size_content">Upload HD Content</string>
+    <string name="summary_original_size_content">Enabled high definition content.</string>
 
     <string name="pref_sync_frequency" translatable="false">info.pelleritoudacity.android.rcapstonepref_sync_frequency</string>
     <string name="pref_title_sync_frequency" translatable="false">Sync Data</string>
