switch youtube player in settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,10 @@
     <string name="title_original_size_content">Upload HD Content</string>
     <string name="summary_original_size_content">Enabled high definition content.</string>
 
+    <string name="pref_youtube_player" translatable="false">info.pelleritoudacity.android.rcapstone.pref.youtube.player</string>
+    <string name="title_youtube_player">Youtube Player</string>
+    <string name="summary_youtube_player">Enabled youtube player.</string>
+
     <string name="pref_sync_frequency" translatable="false">info.pelleritoudacity.android.rcapstonepref_sync_frequency</string>
     <string name="pref_title_sync_frequency" translatable="false">Sync Data</string>
     <string-array name="pref_sync_frequency_titles">
